--- a/index.html
+++ b/index.html
@@ -22,13 +22,7 @@
 			<!-- Header-->
 				<header id="header">
 					<h1 id="logo"><a href="index.html">Portfolio</a></h1>
-					<nav id="nav">
 
-									</li>
-								</ul>
-							</li>
-						</ul>
-					</nav>
 				</header>
 
 			<!-- Banner -->
@@ -132,13 +126,13 @@ On the top right-hand corner there's a layer control device that gives the user 
 								<li><a href="https://github.com/Ricky-de-Medeiros/Side-Projects/blob/master/Dictionary_Database" class="button">View Code</a></li>
 							</ul>
 						</div>
-						<a href="#four" class="goto-next scrolly">Next</a>
+						<a href="#five" class="goto-next scrolly">Next</a>
 					</section>
 
 
 
 			<!-- Five-->
-				<section id="four" class="wrapper style1 special fade-up">
+				<section id="five" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
 							<h2>Other Explorations</h2>
